# libnetconf2

./: .gitignore  .travis-deps-linux.sh  .travis-deps-osx.sh  .travis.yml  CMakeLists.txt  CODINGSTYLE.md  Doxyfile.in  FAQ.md  FindLibNETCONF2.cmake  LICENSE  README.md  SECURITY.md  libnetconf2-config-version.cmake.in  libnetconf2-config.cmake  libnetconf2.pc.in  nc_client.h  nc_client.h.in  nc_server.h  nc_server.h.in  nc_transapi.h  nc_version.h.in  sample_ssh_netconf_server_api_usage.c
.github/workflows/: ci.yml  codeql.yml  devel-push.yml  libnetconf3-ci.yml
CMakeModules/: Doc.cmake  FindCMocka.cmake  FindLibMbedTLS.cmake  FindLibPAM.cmake  FindLibSSH.cmake  FindLibVAL.cmake  FindLibYANG.cmake  FindMbedTLS.cmake  FindPackageVersionCheck.cmake  UseCompat.cmake  uninstall.cmake
compat/: compat.c  compat.h.in
distro/config/: apkg.toml
distro/pkg/deb/: changelog  control  copyright  libnetconf2-3.install  libnetconf2-dev.install  watch
distro/pkg/rpm/: libnetconf2.spec
distro/scripts/: make-archive.sh  upstream-version.sh
distro/tests/: control  test-pkg-config.sh
doc/: libnetconf.doc
doc/ABI/: README  abi.sh  build.sh  libnetconf2.json
examples/: CMakeLists.txt  README.md  admin_key  client.c  config.json  config.xml  example.h.in  server.c
modules/: iana-tls-cipher-suite-algs@2025-04-04.yang  ietf-crypto-types@2023-04-17.yang  ietf-crypto-types@2023-12-28.yang  ietf-keystore@2023-12-28.yang  ietf-netconf-server@2022-05-24.yang  ietf-netconf-server@2023-12-28.yang  ietf-netconf-server@2025-04-24.yang  ietf-ssh-common@2023-12-28.yang  ietf-ssh-server@2023-12-28.yang  ietf-tcp-client@2023-12-28.yang  ietf-tcp-common@2023-12-28.yang  ietf-tcp-server@2023-12-28.yang  ietf-tls-common@2023-12-28.yang  ietf-tls-server@2023-12-28.yang  ietf-truststore@2023-12-28.yang  ietf-x509-cert-to-name.yang  ietf_netconf@2013-09-29_yang.h  ietf_netconf_monitoring@2010-10-04_yang.h  libnetconf2-netconf-server.yang  libnetconf2-netconf-server@2023-09-07.yang  libnetconf2-netconf-server@2024-01-15.yang  libnetconf2-netconf-server@2024-07-09.yang  libnetconf2-netconf-server@2025-01-23.yang  libnetconf2-netconf-server@2025-06-02.yang  libnetconf2-netconf-server@2025-11-11.yang
python/: CMakeLists.txt  README.md  err.c  netconf.c  netconf.h  rpc.c  rpc.h  session.c  session.h  setup.py.in  ssh.c  tls.c
python/docs/: Makefile.in  api.rst  conf.py  index.rst
python/examples/: editconfig.py  get.py  serverinfo.py
schemas/: ietf-netconf-notifications.yin  module-a-dv.yang  module-a-dv2.yang  module-a.yang
src/: config.h  config.h.in  config_new.c  config_new.h  config_new_ssh.c  config_new_ssh.h  config_new_tls.c  config_server.c  config_server.h  datastore.c  datastore_p.h  io.c  libnetconf.h  log.c  log.h  log_p.h  messages.c  messages.h  messages_client.c  messages_client.h  messages_p.h  messages_server.c  messages_server.h  netconf.h  server_config.c  server_config.h  server_config_ks.c  server_config_p.h  server_config_ts.c  server_config_util.c  server_config_util.h  server_config_util_ssh.c  server_config_util_tls.c  session.c  session.h  session_client.c  session_client.h  session_client_ch.h  session_client_ssh.c  session_client_tls.c  (+12 more)
tests/: CMakeLists.txt  config.h.in  ld.supp  library_lsan.supp  library_valgrind.supp  ln2_test.c  ln2_test.h  test_auth.c  test_auth_ssh.c  test_authkeys.c  test_cert_exp_notif.c  test_ch.c  test_client_messages.c  test_client_monitoring.c  test_client_ssh.c  test_client_thread.c  test_config.c  test_config_new.c  test_crl.c  test_ec.c  test_ed25519.c  test_endpt_share_clients.c  test_fd_comm.c  test_init_destroy.c  test_init_destroy_client.c  test_init_destroy_server.c  test_init_destroy_ssh.c  test_init_destroy_ssh_tls.c  test_init_destroy_tls.c  test_io.c  test_keystore.c  test_ks_ts.c  test_nc3.c  test_pam.c  test_replace.c  test_runtime_changes.c  test_server_thread.c  test_server_thread.supp  test_ssh.c  test_thread_messages.c  (+5 more)
tests/client/: test_client.c  test_client_messages.c  test_client_ssh.c  test_client_tls.c
tests/data/: 0b527f1f.0  authorized_keys  client.crt  client.key  client_SAN.crt  config.xml  crl.pem  ec_server.crt  ec_server.key  ec_serverca.pem  fbe17800.0  id_ecdsa256  id_ecdsa256.pub  id_ecdsa384  id_ecdsa384.pub  id_ecdsa521  id_ecdsa521.pub  id_ed25519.pub  key_dsa  key_dsa.pub  key_ecdsa  key_ecdsa.pub  key_rsa  key_rsa.pub  server.crt  server.key  serverca.key  serverca.pem
tests/data/modules/: ietf-datastores.yin  ietf-netconf-nmda.yin  ietf-netconf-notifications.yin  ietf-origin.yin
tests/data/nc10/: rpc-lock
tests/data/nc11/: rpc-lock
tests/pam/: pam_netconf.c
